--- a/src/main/resources/templates/supplymanagement/druginformation.html
+++ b/src/main/resources/templates/supplymanagement/druginformation.html
@@ -17,8 +17,160 @@
     <script src="../js/plugins/bootstrap/js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
-        function down(){
-            window.location.href="down";
+        var qian;
+        var hou;
+        $(function () {
+            selectByEntity();
+        })
+        //查询
+        function selectByEntity(pageNum){
+            $("#tbody").empty();
+            var serial_number=$("#serial_number").val();
+            var common_name=$("#common_name").val();
+            var dosage_form_id=$("#dosage_form_id").val();
+            var specification=$("#specification").val();
+            var unit=$("#unit").val();
+            var conversion_fraction=$("#conversion_fraction").val();
+            var drug_category_id=$("#drug_category_id").val();
+            var drug_transaction_status_id=$("#drugTransactionStatusId").val();
+            var enterpriseName=$("#enterpriseName").val();
+            var tradeName=$("#tradeName").val();
+            var qualityLevelId=$("#qualityLevelId").val();
+            $.ajax({
+                url:"DrugsInformation",
+                data:{
+                    "serialNumber":serial_number,
+                    "commonName":common_name,
+                    "dosageFormId":dosage_form_id,
+                    "specification":specification,
+                    "unit":unit,
+                    "conversionFraction":conversion_fraction,
+                    "drugCategoryId":drug_category_id,
+                    "drugTransactionStatusId":drug_transaction_status_id,
+                    "enterpriseName":enterpriseName,
+                    "tradeName":tradeName,
+                    "qualityLevelId":qualityLevelId,
+                    "pageNum":pageNum
+                },
+                type:"post",
+                dataType:"json",
+                success:function (result) {
+                    console.log(result);
+                    var v = "";
+                    for(var i=0;i<result.list.length;i++){
+                        var data=result.list;
+                        v+='<tr>';
+                        v+='<td>'+data[i].serialNumber+'</td>'
+                        v+='<td>'+data[i].commonName+'</td>'
+                        v+='<td>'+data[i].dosageFormId+'</td>'
+                        v+='<td>'+data[i].specification+'</td>'
+                        v+='<td>'+data[i].unit+'</td>'
+                        v+='<td>'+data[i].conversionFraction+'</td>'
+                        v+='<td>'+data[i].enterpriseName+'</td>';
+                        v+='<td>'+data[i].tradeName+'</td>';
+                        v+='<td>'+data[i].biddingPrice+'</td>';
+                        v+='<td>'+data[i].qualityLevelId+'</td>';
+                        v+='<td>'+data[i].drugCategoryId+'</td>'
+                        v+='<td>'+data[i].drugTransactionStatusId+'</td>'
+                        v+='<td><a href="#" data-target="#editModal1" data-toggle="modal" onclick="saw('+data[i].id+')">查看</a></td>'
+                        v+='</tr>';
+                    }
+                    $("#tbody").append(v);
+                    qian=result.pageNum==1?1:result.pageNum-1;
+                    hou=result.pageNum==result.pages?result.pages:result.pageNum+1;
+                }
+            })
+        }
+        // 剂型
+        $.ajax({
+            url:"selectDurgsFrom",
+            data:{},
+            type:"post",
+            dataType:"json",
+            success:function (result) {
+                $("#dosage_form_id").empty();
+                console.log(result)
+                $("#dosage_form_id").prepend('<option value="0">请选择</option>')
+                for(var i=0;i<result.data.length;i++){
+                    var list=result.data;
+                    $("#dosage_form_id").prepend('<option value="' + list[i].durgFromId + '">' + list[i].drugFrom + '</option>')
+                }
+            }
+        })
+        // 药品类别
+        $.ajax({
+            url:"selectdrugcategory",
+            data:{},
+            type:"post",
+            dataType:"json",
+            success:function (result) {
+                $("#drug_category_id").empty();
+                console.log(result)
+                $("#drug_category_id").prepend('<option value="0">请选择</option>')
+                for(var i=0;i<result.data.length;i++){
+                    var list=result.data;
+                    $("#drug_category_id").prepend('<option value="' + list[i].id + '">' + list[i].drugCategoryName + '</option>')
+                }
+            }
+        })
+        // 药品交易状态
+        $.ajax({
+            url:"selectDrugTransactionStatus",
+            data:{},
+            type:"post",
+            dataType:"json",
+            success:function (result) {
+                $("#drugTransactionStatusId").empty();
+                console.log(result)
+                $("#drugTransactionStatusId").prepend('<option value="0">请选择</option>')
+                for(var i=0;i<result.data.length;i++){
+                    var list=result.data;
+                    $("#drugTransactionStatusId").prepend('<option value="' + list[i].id + '">' + list[i].drugTransactionExplain + '</option>')
+                }
+            }
+        })
+        //层次
+        $.ajax({
+            url:"qualityLevel",
+            data:{},
+            type:"post",
+            dataType:"json",
+            success:function (result) {
+                $("#qualityLevelId").empty();
+                console.log(result)
+                $("#qualityLevelId").prepend('<option value="0">请选择</option>')
+                for(var i=0;i<result.data.length;i++){
+                    var list=result.data;
+                    $("#qualityLevelId").prepend('<option value="' + list[i].quaId + '">' + list[i].level + '</option>')
+                }
+            }
+        })
+        function saw(id) {
+            $.ajax({
+                url:"getSelect",
+                data:{
+                    "id":id
+                },
+                type:"post",
+                dataType:"json",
+                success:function (result) {
+                    var data=result.data;
+                    $("#serialNumber").val(data.serialNumber);
+                    $("#commonName").val(data.commonName);
+                    $("#dosageFormId").val(data.durgsFrom.drugFrom);
+                    $("#specifications").val(data.specification);
+                    $("#units").val(data.unit);
+                    $("#conversionFraction").val(data.conversionFraction);
+                    $("#enterpriseNames").val(data.enterpriseName);
+                    $("#tradeNames").val(data.tradeName);
+                    $("#biddingPrice").val(data.biddingPrice);
+                    $("#qualityLevelIds").val(data.qualityLevel.level);
+                    $("#drugCategoryId").val(data.drugCategory.drugCategoryName);
+                    $("#drugTransactionStatusIds").val(data.drugTransactionStatus.drugTransactionExplain);
+                    $("#common_name_pinyin").val(data.commonNamePinyin);
+                    $("#source_of_retail_price").val(data.sourceOfRetailPrice);
+                }
+            })
         }
     </script>
 
@@ -36,12 +188,12 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">药品流水号：</span>
             </td>
             <td >
-                <input class="form-control" id="searchEntity_unitName">
+                <input class="form-control" id="serial_number">
             </td>
             <td style="text-align: right"><span style="white-space: nowrap;display: inline-block;color: #0E74B4">通用名：</span>
             </td>
             <td >
-                <input class="form-control" id="searchEntity_organizationalCode">
+                <input class="form-control" id="common_name">
             </td>
         </tr>
         <tr>
@@ -49,7 +201,7 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">剂型：</span>
             </td>
             <td>
-                <select style="width: 30%;height: 20%">
+                <select style="width: 30%;height: 20%" id="dosage_form_id">
                     <option value="0">请选择</option>
                 </select>
                 <!-- <input class="form-control" id="searchEntity_nameOfRegistrant" >-->
@@ -58,7 +210,7 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">规格：</span>
             </td>
             <td>
-                <input class="form-control">
+                <input class="form-control" id="specification">
             </td>
         </tr>
         <tr>
@@ -66,13 +218,13 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">单位：</span>
             </td>
             <td>
-                <input class="form-control">
+                <input class="form-control" id="unit">
             </td>
             <td style="text-align: right">
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">转换系数：</span>
             </td>
             <td>
-                <input class="form-control">
+                <input class="form-control" id="conversion_fraction">
             </td>
         </tr>
         <tr>
@@ -80,13 +232,13 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">生产企业：</span>
             </td>
             <td>
-                <input class="form-control">
+                <input class="form-control" id="enterpriseName">
             </td>
             <td style="text-align: right">
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">商品名：</span>
             </td>
             <td>
-                <input class="form-control">
+                <input class="form-control" id="tradeName">
             </td>
         </tr>
            <tr>
@@ -100,7 +252,7 @@
                    <span style="white-space: nowrap;display: inline-block;color: #0E74B4">质量层次：</span>
                </td>
                <td>
-                   <select style="width: 30%;height: 20%">
+                   <select style="width: 30%;height: 20%" id="qualityLevelId">
                        <option value="0">请选择</option>
                    </select>
                    <!-- <input class="form-control" id="" style="width: 50%;height: 20%">-->
@@ -111,7 +263,7 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">药品类别：</span>
             </td>
             <td>
-                <select style="width: 30%;height: 20%">
+                <select style="width: 30%;height: 20%" id="drug_category_id">
                     <option value="0">请选择</option>
                 </select>
                 <!-- <input class="form-control" id="" style="width: 50%;height: 20%">-->
@@ -120,7 +272,7 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">药品交易状态：</span>
             </td>
             <td>
-                <select style="width: 30%;height: 20%">
+                <select style="width: 30%;height: 20%" id="drugTransactionStatusId">
                     <option value="0">请选择</option>
                 </select>
                 <!-- <input class="form-control" id="" >-->
@@ -169,11 +321,9 @@
                 <th class="sorting">药品类别</th>
                 <th class="sorting">交易状态</th>
                 <th class="sorting">详细</th>
-                <th class="sorting">修改</th>
-                <th class="sorting">删除</th>
             </tr>
             </thead>
-            <tbody class="context">
+            <tbody class="context" id="tbody">
             <tr>
                 <td>0000008</td>
                 <td>0.9%氯化钠</td>
@@ -190,12 +340,6 @@
                 <td>
                     <a href="#">查看</a>
                 </td>
-                <td>
-                    <a href="#">修改</a>
-                </td>
-                <td>
-                    <a href="#">删除</a>
-                </td>
             </tr>
             </tbody>
 
@@ -206,17 +350,17 @@
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li>
-                        <a href="#" aria-label="Previous">
+                        <a href="#" aria-label="Previous" onclick="selectByEntity(qian)">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
-                    <li><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#">5</a></li>
+                    <li><a href="#" onclick="selectByEntity(1)">1</a></li>
+                    <li><a href="#" onclick="selectByEntity(2)">2</a></li>
+                    <li><a href="#" onclick="selectByEntity(3)">3</a></li>
+                    <li><a href="#" onclick="selectByEntity(4)">4</a></li>
+                    <li><a href="#" onclick="selectByEntity(5)">5</a></li>
                     <li>
-                        <a href="#" aria-label="Next">
+                        <a href="#" aria-label="Next" onclick="selectByEntity(hou)">
                             <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
@@ -231,73 +375,66 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button id="bt" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-                <h3 id="myModalLabe">登记页面</h3>
+                <h3 id="myModalLabe">详情页面</h3>
             </div>
             <div class="modal-body">
                 <table class="table table-bordered table-striped" id="id_table">
                     <tr>
-                        <td>品目号:</td>
-                        <td></td>
+                        <td>流水号:</td>
+                        <td><input type="text" id="serialNumber"> </td>
                         <td>通用名:</td>
-                        <td><input id="organizationalCode1" name="organizationalCode" class="form-control"></td>
+                        <td><input id="commonName" name="commonName" class="form-control"></td>
                     </tr>
                     <tr>
                         <td>剂型:</td>
                         <td>
-                            <select style="width:50%;height: 10%">
-                                <option value="0">请选择</option>
-                            </select>
+                            <input type="text" id="dosageFormId"> </td>
                         </td>
                         <td>规格:</td>
-                        <td><input id="idCard1" name="idCard" class="form-control">
+                        <td>
+                            <input id="specifications" name="specification" class="form-control">
                         </td>
                     </tr>
                     <tr>
                         <td>单位:</td>
-                        <td><input id="phone1" name="phone" class="form-control"></td>
+                        <td><input id="units" name="unit" class="form-control"></td>
                         <td>转换系数:</td>
-                        <td><input id="nameOfRegistrant1" name="" class="form-control"></td>
+                        <td><input id="conversionFraction" name="conversionFraction" class="form-control"></td>
+                    </tr>
+                    <tr>
+                        <td>生产企业:</td>
+                        <td><input id="enterpriseNames" name="enterpriseName" class="form-control"></td>
+                        <td>商品名:</td>
+                        <td><input id="tradeNames" name="tradeName" class="form-control"></td>
+                    </tr>
+                    <tr>
+                        <td>中标价:</td>
+                        <td><input id="biddingPrice" name="biddingPrice" class="form-control"></td>
+                        <td>质量层次:</td>
+                        <td>
+                            <input type="text" id="qualityLevelIds">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>零售价出处:</td>
+                        <td><input id="source_of_retail_price" name="source_of_retail_price" class="form-control"></td>
+                        <td>通用名拼音:</td>
+                        <td>
+                            <input type="text" id="common_name_pinyin">
+                        </td>
                     </tr>
                     <tr>
                         <td>药品类别:</td>
+                        <td><input id="drugCategoryId" name="drugCategoryId" class="form-control"></td>
+                        <td>药品交易状态:</td>
                         <td>
-                            <select style="width:50%;height: 10%">
-                                <option value="0">请选择</option>
-                            </select>
+                            <input id="drugTransactionStatusIds" name="drugTransactionStatusId" class="form-control">
                         </td>
-                        <td>状态:</td>
-                        <td><select style="width:50%;height: 10%">
-                            <option value="0">请选择</option>
-                        </select></td>
                     </tr>
                 </table>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-success" ng-click="save()" onclick="updataRegistrationOfCases()">保存</button>
                 <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- 编辑窗口 -->
-<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button id="" type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel1">药品品目导入</h3>
-            </div>
-            <div style="text-align: center">
-                下载模板文件<a href="#">点击下载药品品目导入模板</a>
-            </div>
-            <div style="text-align: center;color: red">提示：请下载后在模板文件中录入药品信息,在下面的“选择文件”中选择要导入的文件,点击“导入”</div>
-            <div class="modal-body" style="text-align: center">
-                <input type="file" name="file" id="file">
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-success" onclick="uploadfile()">上传</button>
-                <button class="btn btn-warning" onclick="">查看导入失败结果</button>
-                <button class="btn btn-danger" data-dismiss="modal" aria-hidden="true">关闭</button>
             </div>
         </div>
     </div>
